--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,12 @@ steps:
 # - name: 'gcr.io/cloud-builders/docker'
 #   args: ["push", "gcr.io/ticket-to-ride-216915/ttr:$REVISION_ID"]
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment', '$BRANCH_NAME', 'server=gcr.io/ticket-to-ride-216915/server:$REVISION_ID', '--namespace=prod']
+  entrypoint: 'bash'
+  args: ['-c', 'kuebctl create namespace $BRANCH_NAME || exit 0']
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: ['apply', '-f', 'deploy', '--namespace=$BRANCH_NAME']
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: ['set', 'image', 'deployment', 'server', 'server=gcr.io/ticket-to-ride-216915/server:$REVISION_ID', '--namespace=$BRANCH_NAME']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
