--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,12 @@ steps:
   args: ['deploy/render.sh']
 
 - name: 'gcr.io/cloud-builders/kubectl'
+  args: ['apply', '-f', 'deploy/namespace.yaml']
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
+
+- name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply', '-f', 'deploy', '--namespace=$BRANCH_NAME']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
