--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,9 +18,11 @@ steps:
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
+  - 'BRANCH_NAME=$BRANCH_NAME'
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply', '-f', 'deploy', '--namespace=$BRANCH_NAME']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
+  - 'BRANCH_NAME=$BRANCH_NAME'
