--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,17 +12,17 @@ steps:
 - name: 'supinf/envsubst'
   entrypoint: '/bin/sh'
   args: ['deploy/render.sh']
+  env:
+  - 'BRANCH_NAME=$BRANCH_NAME'
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply', '-f', 'deploy/namespace.yaml']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
-  - 'BRANCH_NAME=$BRANCH_NAME'
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply', '-f', 'deploy', '--namespace=$BRANCH_NAME']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
-  - 'BRANCH_NAME=$BRANCH_NAME'
