--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,13 +16,13 @@ steps:
   - 'BRANCH_NAME=$BRANCH_NAME'
 
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'deploy/namespace.yaml']
+  args: ['apply', '-f', 'deploy/cluster']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
 
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'deploy', '--namespace=$BRANCH_NAME']
+  args: ['apply', '-f', 'deploy/app', '--namespace=$BRANCH_NAME']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
