--- a/deploy/app/service.yaml
+++ b/deploy/app/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: server
 spec:
+  type: ClusterIP
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
     app: ticket-to-ride
-  type: LoadBalancer
