--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,7 @@ steps:
   args: ['deploy/render.sh']
   env:
   - 'BRANCH_NAME=$BRANCH_NAME'
+  - 'REVISION_ID=$REVISION_ID'
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['apply', '-f', 'deploy/cluster']
