--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,13 +17,7 @@ steps:
   - 'REVISION_ID=$REVISION_ID'
 
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'deploy/cluster']
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
-
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'deploy/app', '--namespace=$BRANCH_NAME']
+  args: ['apply', '-f', 'deploy/cluster', '--recursive']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=prod'
